# data-collect

./: test.launch  test.raw  test2.raw
devel/: .catkin  .rosinstall
src/: camera1394stereo.tar
src/audio/: CMakeLists.txt  package.xml
src/audio/src/: .capture.cpp.swp  capture.cpp  capture2.cpp  main_capture.cpp  playback.cpp
src/audio_common_msgs/msg/: AudioData.msg
src/depthsense_node/: CMakeLists.txt  package.xml
src/depthsense_node/msg/: image_msg.msg
src/depthsense_node/src/: depth.cpp  depth_imp.cpp
src/test/bumblebee2/.svn/: all-wcprops  entries
src/test/bumblebee2/.svn/text-base/: CMakeLists.txt.svn-base  manifest.xml.svn-base
src/test/bumblebee2/cfg/: Bumblebee2.cfg
src/test/bumblebee2/cfg/.svn/: all-wcprops  entries
src/test/bumblebee2/docs/: Bumblebee2Config-usage.dox
src/test/bumblebee2/docs/.svn/: all-wcprops  entries
src/test/bumblebee2/include/.svn/: all-wcprops  entries
src/test/bumblebee2/launch/.svn/: all-wcprops  entries
src/test/bumblebee2/launch/.svn/text-base/: Bumblebee2.launch.svn-base
src/test/bumblebee2/src/.svn/: all-wcprops  entries
src/test/bumblebee2/src/.svn/text-base/: bumblebee2.cpp.svn-base  dev_camera1394.cpp.svn-base
src/test/libdc1394v2/: configure_in.patch  libdc1394v2-svn-r580.tar.gz.md5sum
src/test/libdc1394v2/.svn/: all-wcprops  entries
src/test/libdc1394v2/.svn/text-base/: Makefile.svn-base
